--- a/index.html
+++ b/index.html
@@ -35,24 +35,23 @@
         serve as the Technical Director for
         <a href="http://commons.pelagios.org">Pelagios Commons</a>, an
         international initative that aims to foster better linkages between
-        online resources documenting the past.
+        online resources documenting the past. I am also the technical lead for
+        the open source project <a href="http://recogito.pelagios.org">Recogito</a>,
+        an online annotation environment for texts and images.
       </p>
 
       <p>
-        I am also the technical lead for
-        the open source project <a href="http://recogito.pelagios.org">Recogito</a>,
-        an online annotation environment for texts and images. As an avid
-        software developer for more than 15 years, I've had decent exposure to
-        to a range of programming languages, including Java, Python, Groovy, C#
-        and C++, although my favourite languages nowadays are Scala, JavaScript
-        and Ruby.
+        As an avid software developer for more than 15 years, I've had decent
+        exposure to a range of programming languages, including Java, Python,
+        Groovy, C# and C++, although my favourite languages nowadays are Scala,
+        JavaScript and Ruby.
       </p>
 
       <p>
         Prior to my current position, I worked as a researcher and
         project manager at the <a href="http://www.ftw.at/">Telecommunications
-        Research Center Vienna</a>, where I also finished my PhD in the area of
-        mobile geospatial applications; and as a a systems architect for a
+        Research Center Vienna</a>, where I also did my PhD in the area of
+        mobile geospatial applications; and as a systems architect for a
         <a href="http://www.a1.net/">major Austrian mobile network operator</a>.
         (There's also a slightly extended - and more academic - version of my
         bio available <a href="bio.html">here</a>.)
