Removed old broken links

--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
          Programme Awards</a>, London, UK, November 2011.</li>
 
        <li>First Prize at the <a href="http://www.europeanaconnect.eu/europeanatech/">EuropeanaTech 2011</a> Hackathon with
-         the <a href="http://www.europeanaglobe.eu/">CultureGlobe Demo</a> (<a href="http://www.youtube.com/watch?v=lCQYD7drPOk">video</a>,
-         <a href="https://github.com/cultureglobe/cultureglobe">source code</a>).</li>
+         the <i>CultureGlobe Demo</i> (<a href="http://www.youtube.com/watch?v=lCQYD7drPOk">video</a>).</li>
 
-       <li>First place at the 2nd International Nokia Ubimedia Mindtrek Award for the <a href="http://p2d.ftw.at/">Point to
-         Discover research project</a>, at the Mindtrek 2008 Conference, Tampere, Finland, October 2008.</li>
+       <li>First place at the 2nd International Nokia Ubimedia Mindtrek Award for the <i>Point to
+         Discover research project</i>, at the Mindtrek 2008 Conference, Tampere, Finland, October 2008.</li>
 
        <li>Best Paper at the <a href="http://www.dl.kuis.kyoto-u.ac.jp/w2gis06/">W2GIS 2006 Symposium</a>, Hong Kong, China:
          <p class="award">Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. <em>Beyond Location Based - The Spatially Aware
@@ -98,9 +97,8 @@
           Digital Humanities Organizations (ADHO) Linked Open Data Special
           Interest Group</a>.</li>
 
-        <li>Member of the <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Introduction.htm">International
-          Cartographic Association Commission on Digital Technologies in
-          Cartographic Heritage</a>.</li>
+        <li>Member of the International Cartographic Association Commission on
+          Digital Technologies in Cartographic Heritage.</li>
 
         <li>Co-organizer of the Linked Pasts 2015 (Jul 20-21, London, UK) and
           Linked Pasts 2016 (Dec 15-16, Madrid, Spain) conferences</li>
@@ -115,9 +113,8 @@
           Spatial INformation Theory - workshop, September 4, 2017, L'Aquila,
           Italy</li>
 
-        <li>Programme Commitee member of the
-          <a href="http://www.eagle-network.eu/about/events/eagle2014/">EAGLE 2014 -
-          International Conference</a>, Paris, France, September 29-30 2014.</li>
+        <li>Programme Commitee member of the EAGLE 2014 International Conference,
+          Paris, France, September 29-30 2014.</li>
       </ul>
    </div>
   </body>
