Added NKOS paper

--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,12 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>Jan R&ouml;rden, Bernhard Haslhofer, Rainer Simon, Sven Schlarb.
+          2018. Traveling through Space and Time, or: Making Historical
+          Travelogues Accessible. In <i>Proceedings of the 18th European
+          Networked Knowledge Organization Systems (NKOS) Workshop</i>,
+          Porto, Portugal, September 13, 2018.</li>
+
         <li>Leif Isaksen, Rainer Simon, Elton Barker. 2017. Social Semantic
           Annotation with Recogito 2. In <i>Digital Humanities 2017
           conference</i>, Montreal, Canada, August 8-11, 2107.</li>
