--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,13 @@
 
       <h1>BOOK CHAPTER</h1>
       <ul>
+	<li>Mihailo St. Popović, Rainer Simon. 2019. Illustrating Workflows in 
+	  Digital Humanities: Byzantine Macedonia in the 13th/14th Centuries
+          and its &quot;Transformation&quot; from Analogue to Digital. In
+	  <i>Power in Landscape. Geographic and Digital Approaches on Historical
+          Research</i>. Mihailo St. Popović, Veronika Polloczek, Bernhard Koschicek,
+          Stefan Eichert (Eds.) Eudora Verlag, Leipzig.</li>
+	      
         <li>Bernhard Haslhofer, Antoine Isaac, Rainer Simon. 2018. Knowledge
           Graphs in the Libraries and Digital Humanities Domain. In
           <i>Encyclopedia of Big Data Technologies</i>. Sherif Sakr, Albert
