--- a/index.html
+++ b/index.html
@@ -59,8 +59,19 @@
 
      <h1>AWARDS</h1>
      <ul>
-       <li>Winner of the <a href="http://dhawards.org/dhawards2016/results/">Digital
-         Humanities Awards 2016</a>, Best DH Data Visualization category.</li>
+      <li>
+        Winner of the <a href="https://openpublishingawards.org/index.php/recogito/" target="_blank"></a>Open 
+        Publishing Awards 2019</a>, first prize, Open Source Software Category with 
+        <a href="https://recogito.pelagios.org" target="_blank">Recogito</a>.</li>
+          
+       <li>
+         Winner of the <a href="http://dhawards.org/dhawards2018/results/" target="_blank"></a>Digital 
+         Humanities Awards 2018</a>, Best DH Tool or Suite of Tools category with 
+         <a href="https://recogito.pelagios.org" target="_blank">Recogito</a>.</li>
+
+       <li><a href="http://dhawards.org/dhawards2016/results/" target="_blank">Digital
+         Humanities Awards 2016</a>, Best DH Data Visualization category with
+         <a href="http://peripleo.pelagios.org" target="_blank">Peripleo</a>.</li>
 
        <li>Winner of the <a href="http://dm2e.eu/open-humanities-awards-round-2-winners-announced/">Open
          Humanities Awards 2014</a>, Open Track category.</li>
