--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
      <h1>AWARDS</h1>
      <ul>
       <li>
-        Winner of the <a href="https://openpublishingawards.org/index.php/recogito/" target="_blank"></a>Open 
+        Winner of the <a href="https://openpublishingawards.org/index.php/recogito/" target="_blank">Open 
         Publishing Awards 2019</a>, first prize, Open Source Software Category with 
         <a href="https://recogito.pelagios.org" target="_blank">Recogito</a>.</li>
           
        <li>
-         Winner of the <a href="http://dhawards.org/dhawards2018/results/" target="_blank"></a>Digital 
+         Winner of the <a href="http://dhawards.org/dhawards2018/results/" target="_blank">Digital 
          Humanities Awards 2018</a>, Best DH Tool or Suite of Tools category with 
          <a href="https://recogito.pelagios.org" target="_blank">Recogito</a>.</li>
 
