--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>
 
       <p class="intro">
-        I'm a Senior Scientist at the
+        I'm a Senior Scientist and Research Software Engineer at the
         <a href="http://www.ait.ac.at/en/research-fields/data-science/">Digital
         Insight Lab</a> at the <a href="http://www.ait.ac.at">AIT Austrian
         Institute of Technology</a>. My work revolves around the use of semantic
