--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         I'm a Senior Scientist and Research Software Engineer at the
         <a href="http://www.ait.ac.at/en/research-fields/data-science/">Digital
         Insight Lab</a> at the <a href="http://www.ait.ac.at">AIT Austrian
-        Institute of Technology</a>. My work revolves around the use of semantic
-        technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
+        Institute of Technology</a>. My work revolves predominantly around the use of 
+        semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
         Data</a> in the <i>Digital Humanities</i> and <i>Digital Library</i>
         fields. I always had a passion for maps, and in many of my projects I
         have been dealing with geospatial or cartographic data. Presently, I
         serve as the Technical Director for
-        <a href="http://commons.pelagios.org">Pelagios Commons</a>, an
+        <a href="http://pelagios.org">Pelagios</a>, an
         international initative that aims to foster better linkages between
         online resources documenting the past. I am also the technical lead for
         the open source project <a href="http://recogito.pelagios.org">Recogito</a>,
@@ -42,9 +42,9 @@
 
       <p>
         As an avid software developer for more than 15 years, I've had decent
-        exposure to a range of programming languages, including Java, Python,
-        Groovy, C# and C++, although my favourite languages nowadays are Scala,
-        JavaScript and Ruby.
+        exposure to a range of programming languages, including Java, Python, PHP,
+        Groovy, C# and C++, although my favourite languages nowadays are JavaScript,
+        Scala, and Ruby.
       </p>
 
       <p>
