--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         international initative that aims to foster better linkages between
         online resources documenting the past. I am also the technical lead for
         the open source project <a href="http://recogito.pelagios.org">Recogito</a>,
-        an online annotation environment for texts and images.
+        an award-winning online annotation environment for texts and images.
       </p>
 
       <p>
