--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,10 @@
       <h1>JOURNAL</h1>
 
       <ul>
+        <li>Rainer Simon, Valeria Vitale, Rebecca Kahn, Elton Barker, Leif Isaksen. 2019.
+          Revisiting Linking Early Geospatial Documents with Recogito. In <i>e-Perimetron</i>. Vol. 14, No. 3
+          (2019), pp. 152-163.</li>
+
         <li>Rainer Simon, Elton Barker, Leif Isaksen, Pau de Soto Cañamares. 2017.
           Linked Data Annotation without the Pointy Brackets: Introducing Recogito
           2. In <i>Journal of Map and Geography Libraries</i>. Vol. 13, 2017,
@@ -63,10 +67,10 @@
 
       <h1>BOOK CHAPTER</h1>
       <ul>
-	<li>Mihailo St. Popović, Rainer Simon. 2019. Illustrating Workflows in 
-	  Digital Humanities: Byzantine Macedonia in the 13th/14th Centuries
+	      <li>Mihailo St. Popović, Rainer Simon. 2019. Illustrating Workflows in 
+	        Digital Humanities: Byzantine Macedonia in the 13th/14th Centuries
           and its &quot;Transformation&quot; from Analogue to Digital. In
-	  <i>Power in Landscape. Geographic and Digital Approaches on Historical
+	        <i>Power in Landscape. Geographic and Digital Approaches on Historical
           Research</i>. Mihailo St. Popović, Veronika Polloczek, Bernhard Koschicek,
           Stefan Eichert (Eds.) Eudora Verlag, Leipzig.</li>
 	      
