--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <p class="intro">
         I'm a Senior Scientist and Research Software Engineer at the
-        <a href="http://www.ait.ac.at/en/research-fields/data-science/">Digital
-        Insight Lab</a> at the <a href="http://www.ait.ac.at">AIT Austrian
+        <a href="https://www.ait.ac.at/en/research-topics/data-science">Data Science
+        and Artificial Intelligence</a> research group at the <a href="http://www.ait.ac.at">Austrian
         Institute of Technology</a>. My work revolves predominantly around the use of 
         semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
         Data</a> in the <i>Digital Humanities</i> and <i>Digital Library</i>
