--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         I'm a Senior Scientist and Research Software Engineer at the
         <a href="https://www.ait.ac.at/en/research-topics/data-science">Data Science
         and Artificial Intelligence</a> research group at the <a href="http://www.ait.ac.at">Austrian
-        Institute of Technology</a>. My work revolves predominantly around the use of 
-        semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
-        Data</a> in the <i>Digital Humanities</i> and <i>Digital Library</i>
-        fields. I always had a passion for maps, and in many of my projects I
-        have been dealing with geospatial or cartographic data. Presently, I
-        serve as the Technical Director for
-        <a href="http://pelagios.org">Pelagios</a>, an
+        Institute of Technology</a>, where I'm co-leading the 
+        <a href="https://www.ait.ac.at/en/research-topics/datascienceartificialintelligence/culturaldatascience">Cultural 
+        Data Science</a> topic. My projects revolve predominantly around the use of 
+        computational approaches, AI and semantic technologies in the <i>Digital 
+        Humanities</i> and <i>Digital Library</i> fields. I always had a passion for maps, and 
+        in many of my projects I have been dealing with geospatial or cartographic data. 
+        Previously, I served as the Technical Director for <a href="http://pelagios.org">Pelagios</a>, an
         international initative that aims to foster better linkages between
         online resources documenting the past. I am also the technical lead for
         the open source project <a href="http://recogito.pelagios.org">Recogito</a>,
