--- a/publications.html
+++ b/publications.html
@@ -95,8 +95,8 @@
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
 	<li>Doris Gruber, Martin Krickl, Jan Rörden, Rainer Simon. 2020.
-	  Semi-Automatic Identification of Travelogues. In <i>Digita Humanities
-	  2020 Conference, Ottawa, Canada/virtual, July 22-24 2020.</i></li>
+	  Semi-Automatic Identification of Travelogues. In <i>Digital Humanities
+	  2020 Conference</i>, Ottawa, Canada/virtual, July 22-24 2020.</li>
 	      
         <li>Jan R&ouml;rden, Bernhard Haslhofer, Rainer Simon, Sven Schlarb.
           2018. Traveling through Space and Time, or: Making Historical
