--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Annotorious | Basic Example</title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="annotorious.min.css" rel="stylesheet">
+    <script src="annotorious.min.js"></script>
     <style>
       html, body {
         padding:20px;
