--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>rainersimon.io</title>
-    <meta http-equiv="refresh" content="0; URL='https://rainersimon.io'" />
+    <meta http-equiv="refresh" content="2; URL='https://rainersimon.io'" />
     <style>
       body, html {
         font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    My personal site has moved to <a href="https://rainersimon.io">rainersimon.io</a>. 
+    You are being redirected to my new personal site at <a href="https://rainersimon.io">rainersimon.io</a>. 
   </body>
 </html>
